<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <com.kyo.zoom.gif.GifView
            android:id="@+id/zoom_gif_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/z_common_padding"
            android:layout_marginLeft="@dimen/z_common_padding"
            android:layout_marginRight="@dimen/z_common_padding"
            android:gravity="start"
            android:text="@string/z_zoom_choose_gif_tip"/>

        <TextView
            android:id="@+id/zoom_gif_directory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/z_common_padding"
            android:layout_marginLeft="@dimen/z_common_padding"
            android:layout_marginRight="@dimen/z_common_padding"
            android:gravity="start"
            android:text="@string/z_zoom_picture_not_choose"/>

        <TextView
            android:id="@+id/zoom_gif_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/z_common_padding"
            android:layout_marginLeft="@dimen/z_common_padding"
            android:layout_marginRight="@dimen/z_common_padding"
            android:gravity="start"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/z_common_padding"
            android:layout_marginLeft="@dimen/z_common_padding"
            android:layout_marginRight="@dimen/z_common_padding"
            android:gravity="center_vertical"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_zoom_picture_height"/>
                <EditText
                    android:id="@+id/zoom_gif_height_edit"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:inputType="number"
                    android:digits="1234567890"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:text="@string/z_zoom_picture_width"/>
                <EditText
                    android:id="@+id/zoom_gif_width_edit"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:inputType="number"
                    android:digits="1234567890"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:text="@string/z_zoom_picture_fixed_l_w"/>
                <Switch
                    android:id="@+id/zoom_gif_fixed_l_w_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:checked="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/zoom_gif_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/z_common_padding"
            android:layout_marginLeft="@dimen/z_common_padding"
            android:layout_marginRight="@dimen/z_common_padding"
            android:layout_marginBottom="@dimen/z_common_padding"
            android:gravity="center"
            android:text="@string/z_confirm"
            android:background="@drawable/zoom_full_corners"/>
</LinearLayout>