<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/zoom_picture_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="300dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:src="@drawable/zoom_icon_demo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:gravity="start"
                android:text="@string/z_zoom_choose_pic_tip"/>

            <TextView
                android:id="@+id/zoom_picture_directory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:gravity="start"
                android:text="@string/z_zoom_picture_not_choose"/>
            <TextView
                android:id="@+id/zoom_picture_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:visibility="gone"
                tools:text="照片信息"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_zoom_picture_height"/>
                <EditText
                    android:id="@+id/zoom_picture_height_edit"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:inputType="number"
                    android:digits="1234567890"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:text="@string/z_zoom_picture_width"/>
                <EditText
                    android:id="@+id/zoom_picture_width_edit"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:inputType="number"
                    android:digits="1234567890"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:text="@string/z_zoom_picture_fixed_l_w"/>
                <Switch
                    android:id="@+id/zoom_picture_fixed_l_w_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:checked="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_zoom_picture_config"/>
                <Spinner
                    android:id="@+id/zoom_picture_config_spinner"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:spinnerMode="dialog"
                    android:background="@color/zoom_color_trans"
                    tools:text="未处理事件" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_zoom_picture_quantity"/>
                <EditText
                    android:id="@+id/zoom_picture_quantity_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:inputType="number"
                    android:digits="1234567890"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/z_common_padding"
                    android:text="@string/z_zoom_picture_quantity_tip"/>
            </LinearLayout>


            <TextView
                android:id="@+id/zoom_picture_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/z_common_padding"
                android:layout_marginLeft="@dimen/z_common_padding"
                android:layout_marginRight="@dimen/z_common_padding"
                android:layout_marginBottom="@dimen/z_common_padding"
                android:gravity="center"
                android:text="@string/z_confirm"
                android:background="@drawable/zoom_full_corners"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>